<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Insercion" >
    
    <TextView
        android:id="@+id/textViewInsercionDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextInsercionDNI"
        android:layout_alignBottom="@+id/editTextInsercionDNI"
        android:layout_alignParentLeft="true"
        android:text="@string/dni"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/dni" />

    <TextView
        android:id="@+id/textViewInsercionNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextInsercionNombre"
        android:layout_alignBottom="@+id/editTextInsercionNombre"
        android:layout_alignParentLeft="true"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/nombre" />

    <TextView
        android:id="@+id/textViewInsercionEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextInsercionEquipo"
        android:layout_alignBottom="@+id/editTextInsercionEquipo"
        android:layout_alignLeft="@+id/textViewInsercionTelefono"
        android:text="@string/equipo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/equipo" />

    <TextView
        android:id="@+id/textViewInsercionApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextInsercionApellidos"
        android:layout_alignBottom="@+id/editTextInsercionApellidos"
        android:layout_alignLeft="@+id/textViewInsercionNombre"
        android:text="@string/apellidos"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/apellidos" />

    <TextView
        android:id="@+id/textViewInsercionDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextInsercionDireccion"
        android:layout_alignBottom="@+id/editTextInsercionDireccion"
        android:layout_alignLeft="@+id/textViewInsercionApellidos"
        android:text="@string/direccion"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/direccion" />

    <TextView
        android:id="@+id/textViewInsercionTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextInsercionTelefono"
        android:layout_alignBottom="@+id/editTextInsercionTelefono"
        android:layout_alignLeft="@+id/textViewInsercionDireccion"
        android:text="@string/telefono"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/telefono" />

    <EditText
        android:id="@+id/editTextInsercionDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@+id/textViewInsercionDireccion"
        android:ems="10"
        android:hint="@string/dni"
        android:focusable="false" />

    <EditText
        android:id="@+id/editTextInsercionNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInsercionDNI"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewInsercionDireccion"
        android:ems="10"
        android:hint="@string/nombre"
        android:maxLength="15" />

    <EditText
        android:id="@+id/editTextInsercionApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInsercionNombre"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewInsercionDireccion"
        android:ems="10"
        android:hint="@string/apellidos"
        android:maxLength="30" />

    <EditText
        android:id="@+id/editTextInsercionDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInsercionApellidos"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewInsercionDireccion"
        android:ems="10"
        android:hint="@string/direccion"
        android:maxLength="50" />

    <EditText
        android:id="@+id/editTextInsercionTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInsercionDireccion"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewInsercionDireccion"
        android:ems="10"
        android:hint="@string/telefono"
        android:maxLength="12" />

    <EditText
        android:id="@+id/editTextInsercionEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInsercionTelefono"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewInsercionDireccion"
        android:ems="10"
        android:hint="@string/equipo"
        android:maxLength="2" />

    <TextView
        android:id="@+id/textViewInsercionTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/insercion"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imageButtonInsercion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:contentDescription="@string/insercion"
        android:onClick="insert"
        android:src="@android:drawable/ic_menu_add" />

</RelativeLayout>
