<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Borrado" >

    <TextView
        android:id="@+id/textViewBorradoDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextBorradoDNI"
        android:layout_alignBottom="@+id/editTextBorradoDNI"
        android:layout_alignParentLeft="true"
        android:text="@string/dni"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/dni" />

    <TextView
        android:id="@+id/textViewBorradoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextBorradoNombre"
        android:layout_alignBottom="@+id/editTextBorradoNombre"
        android:layout_alignParentLeft="true"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/nombre" />

    <TextView
        android:id="@+id/textViewBorradoEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextBorradoEquipo"
        android:layout_alignBottom="@+id/editTextBorradoEquipo"
        android:layout_alignLeft="@+id/textViewBorradoTelefono"
        android:text="@string/equipo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/equipo" />

    <TextView
        android:id="@+id/textViewBorradoApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextBorradoApellidos"
        android:layout_alignBottom="@+id/editTextBorradoApellidos"
        android:layout_alignLeft="@+id/textViewBorradoNombre"
        android:text="@string/apellidos"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/apellidos" />

    <TextView
        android:id="@+id/textViewBorradoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextBorradoDireccion"
        android:layout_alignBottom="@+id/editTextBorradoDireccion"
        android:layout_alignLeft="@+id/textViewBorradoApellidos"
        android:text="@string/direccion"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/direccion" />

    <TextView
        android:id="@+id/textViewBorradoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextBorradoTelefono"
        android:layout_alignBottom="@+id/editTextBorradoTelefono"
        android:layout_alignLeft="@+id/textViewBorradoDireccion"
        android:text="@string/telefono"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/telefono" />

    <EditText
        android:id="@+id/editTextBorradoDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@+id/textViewBorradoDireccion"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/dni" />

    <EditText
        android:id="@+id/editTextBorradoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextBorradoDNI"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewBorradoDireccion"
        android:ems="10"
        android:hint="@string/nombre"
        android:focusable="false"
        android:maxLength="20"  />

    <EditText
        android:id="@+id/editTextBorradoApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextBorradoNombre"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewBorradoDireccion"
        android:ems="10"
        android:hint="@string/apellidos"
        android:focusable="false"
        android:maxLength="40" />

    <EditText
        android:id="@+id/editTextBorradoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextBorradoApellidos"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewBorradoDireccion"
        android:ems="10"
        android:hint="@string/direccion"
        android:focusable="false"
        android:maxLength="40"  />

    <EditText
        android:id="@+id/editTextBorradoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextBorradoDireccion"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewBorradoDireccion"
        android:ems="10"
        android:hint="@string/telefono"
        android:focusable="false"
        android:maxLength="20"  />

    <EditText
        android:id="@+id/editTextBorradoEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextBorradoTelefono"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textViewBorradoDireccion"
        android:ems="10"
        android:hint="@string/equipo"
        android:focusable="false"
        android:maxLength="10"  />

    <TextView
        android:id="@+id/textViewBorradoTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/borrado"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imageButtonBorrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/borrado"
        android:background="#000000"
        android:onClick="delete"
        android:src="@android:drawable/ic_menu_delete" />

</RelativeLayout>
